# Client-Express

./: .gitignore  README.md  compile_errors.txt  next.config.ts  package-lock.json  package.json  proxy.ts  todo.md  vitest.config.ts
chroma-server/: main.py  pyproject.toml  run-chroma.ps1
chroma-server/chroma_db_data/: chroma.sqlite3
docs/: MONITORING.md  USER_GUIDE.md
pdf-extractor/: .dockerignore  Dockerfile  app.py  extractors.py  pyproject.toml  test_ocr.py
plans/: implementation-plan.md  payment-flow.md
prisma/: schema.prisma
public/: widget.js
scripts/: deploy.sh  test-embedding.ts  test-llm.ts
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: providers.tsx
src/hooks/: use-keyboard-shortcuts.ts  use-text-to-speech.ts  use-voice-input.ts
src/lib/: api-key-auth.ts  audit.ts  auth.ts  cache.ts  campay.ts  config.ts  embedding-consistency-checker.ts  embedding-service.ts  encryption.ts  hybrid-retriever.ts  hybrid-search.ts  limits.ts  llm-service.ts  model-registry.ts  pdf-extractor-client.ts  progress-broadcaster.ts  query-client.ts  query-rewriter.ts  rag-error-handler.ts  rag-logger.ts  rate-limit.ts  relevance-threshold-manager.ts  retry-handler.ts  sanitize.ts  schemas.ts  text-chunker.ts  text-extractor.ts  upload-session.ts  upload-validation.ts  user-api-key.ts  vector-store-validator.ts  vector-store.ts  with-rate-limit.ts
src/services/: analytics.service.ts  chat.service.ts  chatbot.service.ts  conversation.service.ts  document.service.ts  enhanced-rag.service.ts  index.ts  project.service.ts  (+3 more)
(+164 files in other folders)
