[project]
name = "pdf-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "h11>=0.16.0",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20251230",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "uvicorn>=0.40.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]
